...
            // if load image failed
            let alert = UIAlertController(
                title: "Error",
                message: "Unable to share selfie without an image",
                preferredStyle: .alert
            )
            let action = UIAlertAction(title: "OK", style: .default, handler: nil)
            alert.addAction(action)
            self.present(alert, animated: true, completion: nil)
            return
        }
        // share activity
        let activity = UIActivityViewController(
...
