...
                print("TAPPED")
                self.currentOverlay = overlay
            }

            optionsStackView.addArrangedSubview(overlayView)
        }
        // add a "Done" button on top right bar
        let addSelfieButton = UIBarButtonItem(barButtonSystemItem: .done, target: self, action: #selector(done))
        navigationItem.rightBarButtonItem = addSelfieButton
        
        self.detectEyebrows(image: image, completion: {
            (eyebrows) in
            self.eyebrows = eyebrows // store results of eyebrows at the end
...
